--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.ts",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/server.ts",
+    "start": "node dist/server.js",
     "dev": "tsx watch src/server.ts",
     "vercel-build": "echo hello"
   },
