--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/server.js",
     "dev": "tsx watch src/server.ts",
     "vercel-build": "echo hello",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate && mkdir tmp"
   },
   "keywords": [],
   "author": "",
